option java_package = "com.github.rolandhe.seesaw.protobuf";
option java_outer_classname = "SeesawProtobufWrapper";

enum ProtocolType {
  BIN = 0;
  TEXT = 1;
}
message HeaderPair {
   required string name = 1;
   required string value = 2;
}
message Headers {
    repeated HeaderPair headerPairs = 1;
}
message RequestPacket {
  optional Headers headers = 1;
  required bytes body = 2;
  required ProtocolType protocol = 3;
  required string methodName = 4;
}

message ResponsePacket {
  optional Headers headers = 1;
  required int32 status = 2;
  optional bytes body = 3;
  optional string message = 4;
}
